[package]
name = "hust-network-login-agpl"
version = "2.0.0"
authors = ["black-binary <blackbinary@qq.com>", "CuteEvilMan <176788515+CuteEvilMan@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR AGPL-3.0-or-later"

[dependencies]
minreq = {version = "2.14", features = [], default-features = false}
num-bigint = "0.4.6"
urlencoding = "2.1.3"


[profile.release]
lto = "fat"
opt-level = 'z'
panic = 'abort'
strip = true
